# RootExtraction

./: CMakeLists.txt  README.md  test.gdml  test.sh  test1.json
General/: CMakeLists.txt
General/include/: LinkDef.h  ParsedShape.hpp  ParsedTGeoManager.hpp  RootMagic.hpp  TGeoManagerExporter.hpp  TGeoManagerParser.hpp  dummy.hpp
General/include/JSON/: JSONWriter.hpp
General/source/: ParsedTGeoManager.cpp  TGeoManagerExporter.cpp  TGeoManagerParser.cpp
General/source/JSON/: JSONWriter.cpp
Test/: CMakeLists.txt
Test/include/: test_main.hpp
Test/source/: JSONWriterTests.cpp  temp_tests.cpp  test_main.cpp
